GeneWeb version 3.08
--------------------

* GeneWeb Service/CGI (gwd)
   - [28 Aug 00] Added option "-wjf" (= wizard just friend) to permanently
     prevent all wizards in all data bases to make changes.
   - [26 Aug 00] In descendants page, added male line and female line.
   - [25 Aug 00] In history, added the ability to see the changes only
     by a given wizard.
   - [24 Aug 00] Fixed bug: when entering Web addresses (http://...)
     in notes, it generates enclosing HTML code to make links, but
     sometimes it did it incorrectly. For example the image insertion
     <img src=...>? did not work because the program changed it into
     <img src=<a href=http://...>>

* Gedcom to GeneWeb (ged2gwb)
  - [26 Aug 00] If -epn (which is default) and -lf, tries now to lowercase
    the public names.

* Geneweb compiler (gwc)
  - [27 Aug 00] Fixed bug: date e.g. "between 1300 and 1350 Julian" where
    printed by gwu as 1300..1350J but gwc expected 1300J..1350 and resulted
    in a syntax error.   

* GeneWeb to Gedcom (gwb2ged) and GeneWeb uncompiler (gwu)
  - [29 Aug 00] Now, when option "-d" (descendants of) is applied, the
    spouses' parents are included, except if the option "-nsp" is given.

* GeneWeb data bases Transfer Program (gwtp)
  - [22 Aug 00] Fixed bug: worked only if the CGI name was gwtp (could not
    be gwtp.cgi, for example). Fixed also the distribution: template files
    used by gwtp (3 files ending with .txt) were not installed. Fixed also
    a problem: when downloading a file, the proposed name for the file was
    not the good one (a trick was used but worked only with Netscape, not
    IE); changed the same thing for images in gwd.

* Documentation:
  - [29 Aug 00] Added an entry in the FAQ about the advanced request.
  - [21 Aug 00] Added an entry in the FAQ about people having "?" (question
    mark) as first name and/or surname.

GeneWeb version 3.07
--------------------

* New feature